fix iphone layout overlaps

--- a/css/anpanc.css
+++ b/css/anpanc.css
@@ -17,10 +17,6 @@
   opacity: 0.7;
 }
 
-.pbfooter {
-  opacity: 0.7;
-}
-
 .hours {
   margin: 30;
   padding: 30;
